--- a/README
+++ b/README
@@ -4,3 +4,11 @@ The final product "should be" a program that will count the nubmer
 of cores on a computer and then launch threads equal to cores-1.
 
 The threads will run a computationally intensive program (probably factoring or some such).
+
+Present status:
+cpu counting is functional
+thread generation is working
+
+Need to be done:
+Factoring program
+Tying number of threads generated to number of cpus
