testing git issue

--- a/README
+++ b/README
@@ -12,3 +12,6 @@ thread generation is working
 Need to be done:
 Factoring program
 Tying number of threads generated to number of cpus
+
+test
+waka
